WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281772
Fix more miscellaneous smart pointer warnings across WebCore and WebKit on main
https://bugs.webkit.org/show_bug.cgi?id=281772
Summary
Fix more miscellaneous smart pointer warnings across WebCore and WebKit on main
Ryosuke Niwa
Reported
2024-10-18 13:03:05 PDT
Fix static analyzer warnings.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-18 13:06:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35449
EWS
Comment 2
2024-10-18 18:31:14 PDT
Committed
285450@main
(b4a492d89344): <
https://commits.webkit.org/285450@main
> Reviewed commits have been landed. Closing PR #35449 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-18 18:32:15 PDT
<
rdar://problem/138222897
>
Fujii Hironori
Comment 4
2024-10-19 00:20:57 PDT
Regressed:
Bug 281810
– REGRESSION(
285450@main
): ASSERTION FAILED: queue.isCurrent()
WebKit Commit Bot
Comment 5
2024-10-19 13:25:49 PDT
Re-opened since this is blocked by
bug 281827
Ryosuke Niwa
Comment 6
2024-10-20 15:05:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35503
EWS
Comment 7
2024-10-20 18:06:24 PDT
Committed
285494@main
(545961fde294): <
https://commits.webkit.org/285494@main
> Reviewed commits have been landed. Closing PR #35503 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug