Source/WebKit/WebProcess/WebCoreSupport/WebWorkerClient.h
@@ -72,8 +72,7 @@ protected:
     WebWorkerClient(SerialFunctionDispatcher&, WebCore::PlatformDisplayID);
 
     // m_dispatcher should stay alive as long as WebWorkerClient is alive.
-    // FIXME: We should use the equivalent of a WeakRef for m_dispatcher.
-    SerialFunctionDispatcher& dispatcher() const { return *m_dispatcher.get(); }
+    RefPtr<SerialFunctionDispatcher> dispatcher() const { return m_dispatcher.get(); }
 
     ThreadSafeWeakPtr<SerialFunctionDispatcher> m_dispatcher;
     const WebCore::PlatformDisplayID m_displayID;
